--- a/_config.yml
+++ b/_config.yml
@@ -5,32 +5,29 @@
 # yourself editing this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
 #
-
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
-title: Your portfolio
-email: youremail@email.com
+title: Elayna Rajsigl
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-
-baseurl: "https://rajsigl.github.io" # the subpath of your site, e.g. /blog
-url: "/my-jekyll-demo" # the base hostname & protocol for your site, e.g. http://example.com
-
-markdown: kramdown
+baseurl: "/jekyll-demo" # the subpath of your site, e.g. /blog
+url: "https://rajsigl.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+insta: rajsigl
+git: Rajsigl
 
 permalink: /:categories/:title/
 
-sass:
-  style: compact # possible values: nested expanded compact compressed
-  
-  
+# Build settings
+markdown: kramdown
+# theme: minima
+#host: 0.0.0.0
+#port: 4000
